[tool.poetry]
name = "lotus-lotes"
version = "0.1.0"
description = ""
authors = ["Francisco Xavier <fxaviertemp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytz = "^2024.1"
pymongo = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
